# actix-web-starter-template

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
configuration/: base.yml
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/api/: health_check.rs
tests/api/: health_check.rs  helpers.rs
