[package]
name = "template"
version = "0.1.0"
authors = ["Mandeep Smagh"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "template"

[dependencies]
actix-web = "=4.0.0-beta.5"
actix-http = "=3.0.0-beta.5"
actix-service = "=2.0.0-beta.5"
reqwest = "0.11"
config = "0.11.0"
serde = { version = "1", features = ["derive"]}
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"

[dev-dependencies]
actix-rt = "2"
tokio = { version = "1", features = ["rt", "macros"] }
