[package]
name = "template"
version = "0.1.0"
authors = ["Mandeep Smagh"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "template"

[dependencies]
actix-web = "=4.0.0-beta.5"
actix-http = "=3.0.0-beta.5"
actix-service = "=2.0.0-beta.5"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
config = "0.11.0"
serde = { version = "1", features = ["derive"]}
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
serde-aux = "2.2.0"

[dev-dependencies]
actix-rt = "2"
tokio = { version = "1", features = ["rt", "macros"] }
